# swoyo_test_case

./: .flake8  README.md  mypy.ini  pyproject.toml  run_linters.sh
configuration/: config.toml
http_client/: __init__.py  client.py  request.py  response.py
send_sms/: __main__.py  parser.py
tests/: conftest.py  test_client.py  test_request.py  test_response.py
